<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_dg"
    android:gravity="top|start"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="2dp"
    android:paddingEnd="30dp"
    android:paddingBottom="30dp"
    android:id="@+id/containerR"
    tools:context=".ResultActivity">

    <!--    Result-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/show_bmi"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/bmiValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/default_bmi"
            android:textColor="#3f51b5"
            android:textSize="30sp" />

    </LinearLayout>

    <!--    Prognosis-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/bmiFlagImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/correct3"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/bmiLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.04"
            android:text="@string/evaluate_bmi_healthy"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </LinearLayout>

    <!--    Line-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorGray" />

    <!--    Advices-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/commentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_advice_healthy"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <!--        Advice 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|left"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:id="@+id/firstAdviceImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/active"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/firstAdviceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_advice_healthy"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>

        <!--        Advice 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|left"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:id="@+id/secondAdviceImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/salad"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/secondAdviceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_advice_healthy"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>

        <!--        Advice 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|left"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:id="@+id/thirdAdviceImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/sleep"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/thirdAdviceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_advice_healthy"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>